// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Image custom borderRadius 1`] = `
Array [
  <div>
    border-radius - 35px
  </div>,
  .c0 {
  box-sizing: border-box;
  width: 120px;
  height: 120px;
  border-radius: 35px;
  object-fit: cover;
}

<img
    alt=""
    className="c0"
    size={120}
    src="https://picsum.photos/512?image=66"
  />,
]
`;

exports[`Storyshots Image custom css 1`] = `
.c1 {
  box-sizing: border-box;
  width: 300px;
  height: 300px;
  border-radius: 4px;
  object-fit: cover;
}

.c0 {
  opacity: 0.5;
  border: dotted 5px red;
}

<img
  alt=""
  className="c0 c1"
  size={300}
  src="https://picsum.photos/512?image=66"
/>
`;

exports[`Storyshots Image custom dimensions 1`] = `
Array [
  <div>
    width - 800px / height - 400px
  </div>,
  .c0 {
  box-sizing: border-box;
  width: 800px;
  height: 400px;
  border-radius: 4px;
  object-fit: cover;
}

<img
    alt=""
    className="c0"
    height="400px"
    size={120}
    src="https://picsum.photos/512?image=66"
    width="800px"
  />,
]
`;

exports[`Storyshots Image image fit values 1`] = `
.c2 {
  box-sizing: border-box;
  width: 120px;
  height: 120px;
  border-radius: 4px;
  object-fit: cover;
}

.c0 {
  box-sizing: border-box;
  width: 120px;
  height: 120px;
  border-radius: 4px;
  object-fit: contain;
}

.c1 {
  box-sizing: border-box;
  width: 120px;
  height: 120px;
  border-radius: 4px;
  object-fit: fill;
}

.c3 {
  box-sizing: border-box;
  width: 120px;
  height: 120px;
  border-radius: 4px;
  object-fit: scale-down;
}

<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
    }
  }
>
  <div
    style={
      Object {
        "fontWeight": "bold",
        "padding": "16px 0 16px 0",
      }
    }
  >
    squared
     image
  </div>
  <div
    style={
      Object {
        "display": "flex",
      }
    }
  >
    <div
      style={
        Object {
          "paddingRight": "28px",
        }
      }
    >
      <div>
        contain
      </div>
      <img
        alt=""
        className="c0"
        size={120}
        src="https://picsum.photos/512?image=66"
      />
    </div>
    <div
      style={
        Object {
          "paddingRight": "28px",
        }
      }
    >
      <div>
        fill
      </div>
      <img
        alt=""
        className="c1"
        size={120}
        src="https://picsum.photos/512?image=66"
      />
    </div>
    <div
      style={
        Object {
          "paddingRight": "28px",
        }
      }
    >
      <div>
        cover
      </div>
      <img
        alt=""
        className="c2"
        size={120}
        src="https://picsum.photos/512?image=66"
      />
    </div>
    <div
      style={
        Object {
          "paddingRight": "28px",
        }
      }
    >
      <div>
        scale-down
      </div>
      <img
        alt=""
        className="c3"
        size={120}
        src="https://picsum.photos/512?image=66"
      />
    </div>
  </div>
  <div
    style={
      Object {
        "fontWeight": "bold",
        "padding": "16px 0 16px 0",
      }
    }
  >
    horizontal
     image
  </div>
  <div
    style={
      Object {
        "display": "flex",
      }
    }
  >
    <div
      style={
        Object {
          "paddingRight": "28px",
        }
      }
    >
      <div>
        contain
      </div>
      <img
        alt=""
        className="c0"
        size={120}
        src="https://picsum.photos/400/200?image=1"
      />
    </div>
    <div
      style={
        Object {
          "paddingRight": "28px",
        }
      }
    >
      <div>
        fill
      </div>
      <img
        alt=""
        className="c1"
        size={120}
        src="https://picsum.photos/400/200?image=1"
      />
    </div>
    <div
      style={
        Object {
          "paddingRight": "28px",
        }
      }
    >
      <div>
        cover
      </div>
      <img
        alt=""
        className="c2"
        size={120}
        src="https://picsum.photos/400/200?image=1"
      />
    </div>
    <div
      style={
        Object {
          "paddingRight": "28px",
        }
      }
    >
      <div>
        scale-down
      </div>
      <img
        alt=""
        className="c3"
        size={120}
        src="https://picsum.photos/400/200?image=1"
      />
    </div>
  </div>
  <div
    style={
      Object {
        "fontWeight": "bold",
        "padding": "16px 0 16px 0",
      }
    }
  >
    vertical
     image
  </div>
  <div
    style={
      Object {
        "display": "flex",
      }
    }
  >
    <div
      style={
        Object {
          "paddingRight": "28px",
        }
      }
    >
      <div>
        contain
      </div>
      <img
        alt=""
        className="c0"
        size={120}
        src="https://picsum.photos/200/400?image=1011"
      />
    </div>
    <div
      style={
        Object {
          "paddingRight": "28px",
        }
      }
    >
      <div>
        fill
      </div>
      <img
        alt=""
        className="c1"
        size={120}
        src="https://picsum.photos/200/400?image=1011"
      />
    </div>
    <div
      style={
        Object {
          "paddingRight": "28px",
        }
      }
    >
      <div>
        cover
      </div>
      <img
        alt=""
        className="c2"
        size={120}
        src="https://picsum.photos/200/400?image=1011"
      />
    </div>
    <div
      style={
        Object {
          "paddingRight": "28px",
        }
      }
    >
      <div>
        scale-down
      </div>
      <img
        alt=""
        className="c3"
        size={120}
        src="https://picsum.photos/200/400?image=1011"
      />
    </div>
  </div>
  <div
    style={
      Object {
        "fontWeight": "bold",
        "padding": "16px 0 16px 0",
      }
    }
  >
    small
     image
  </div>
  <div
    style={
      Object {
        "display": "flex",
      }
    }
  >
    <div
      style={
        Object {
          "paddingRight": "28px",
        }
      }
    >
      <div>
        contain
      </div>
      <img
        alt=""
        className="c0"
        size={120}
        src="https://picsum.photos/56?image=111"
      />
    </div>
    <div
      style={
        Object {
          "paddingRight": "28px",
        }
      }
    >
      <div>
        fill
      </div>
      <img
        alt=""
        className="c1"
        size={120}
        src="https://picsum.photos/56?image=111"
      />
    </div>
    <div
      style={
        Object {
          "paddingRight": "28px",
        }
      }
    >
      <div>
        cover
      </div>
      <img
        alt=""
        className="c2"
        size={120}
        src="https://picsum.photos/56?image=111"
      />
    </div>
    <div
      style={
        Object {
          "paddingRight": "28px",
        }
      }
    >
      <div>
        scale-down
      </div>
      <img
        alt=""
        className="c3"
        size={120}
        src="https://picsum.photos/56?image=111"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Image image size values 1`] = `
.c1 {
  box-sizing: border-box;
  width: 40px;
  height: 40px;
  border-radius: 100%;
  object-fit: cover;
}

.c6 {
  box-sizing: border-box;
  width: 72px;
  height: 72px;
  border-radius: 4px;
  object-fit: cover;
}

.c2 {
  box-sizing: border-box;
  width: 24px;
  height: 24px;
  border-radius: 100%;
  object-fit: cover;
}

.c0 {
  box-sizing: border-box;
  width: 56px;
  height: 56px;
  border-radius: 100%;
  object-fit: cover;
}

.c3 {
  box-sizing: border-box;
  width: 16px;
  height: 16px;
  border-radius: 100%;
  object-fit: cover;
}

.c4 {
  box-sizing: border-box;
  width: 240px;
  height: 240px;
  border-radius: 4px;
  object-fit: cover;
}

.c5 {
  box-sizing: border-box;
  width: 120px;
  height: 120px;
  border-radius: 4px;
  object-fit: cover;
}

.c7 {
  box-sizing: border-box;
  width: 48px;
  height: 48px;
  border-radius: 4px;
  object-fit: cover;
}

.c8 {
  box-sizing: border-box;
  width: 40px;
  height: 40px;
  border-radius: 4px;
  object-fit: cover;
}

<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
    }
  }
>
  <div
    style={
      Object {
        "fontWeight": "bold",
        "padding": "16px 0 16px 0",
      }
    }
  >
    Badge sizes
  </div>
  <div
    style={
      Object {
        "display": "flex",
      }
    }
  >
    <div
      style={
        Object {
          "marginRight": "36px",
        }
      }
    >
      <div>
        LARGE - 56px
      </div>
      <img
        alt=""
        className="c0"
        size={56}
        src="https://picsum.photos/512?image=66"
      />
    </div>
    <div
      style={
        Object {
          "marginRight": "36px",
        }
      }
    >
      <div>
        MEDIUM - 40px
      </div>
      <img
        alt=""
        className="c1"
        size={40}
        src="https://picsum.photos/512?image=66"
      />
    </div>
    <div
      style={
        Object {
          "marginRight": "36px",
        }
      }
    >
      <div>
        SMALL - 24px
      </div>
      <img
        alt=""
        className="c2"
        size={24}
        src="https://picsum.photos/512?image=66"
      />
    </div>
    <div
      style={
        Object {
          "marginRight": "36px",
        }
      }
    >
      <div>
        X_SMALL - 16px
      </div>
      <img
        alt=""
        className="c3"
        size={16}
        src="https://picsum.photos/512?image=66"
      />
    </div>
  </div>
  <div
    style={
      Object {
        "fontWeight": "bold",
        "padding": "16px 0 16px 0",
      }
    }
  >
    Thumbnail sizes
  </div>
  <div
    style={
      Object {
        "display": "flex",
      }
    }
  >
    <div
      style={
        Object {
          "marginRight": "36px",
        }
      }
    >
      <div>
        HUGE - 240px
      </div>
      <img
        alt=""
        className="c4"
        size={240}
        src="https://picsum.photos/512?image=66"
      />
    </div>
    <div
      style={
        Object {
          "marginRight": "36px",
        }
      }
    >
      <div>
        X_LARGE - 120px
      </div>
      <img
        alt=""
        className="c5"
        size={120}
        src="https://picsum.photos/512?image=66"
      />
    </div>
    <div
      style={
        Object {
          "marginRight": "36px",
        }
      }
    >
      <div>
        LARGE - 72px
      </div>
      <img
        alt=""
        className="c6"
        size={72}
        src="https://picsum.photos/512?image=66"
      />
    </div>
    <div
      style={
        Object {
          "marginRight": "36px",
        }
      }
    >
      <div>
        MEDIUM - 48px
      </div>
      <img
        alt=""
        className="c7"
        size={48}
        src="https://picsum.photos/512?image=66"
      />
    </div>
    <div
      style={
        Object {
          "marginRight": "36px",
        }
      }
    >
      <div>
        SMALL - 40px
      </div>
      <img
        alt=""
        className="c8"
        size={40}
        src="https://picsum.photos/512?image=66"
      />
    </div>
  </div>
</div>
`;
